// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`x-sohcah-brand - branded boolean - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.3.0
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const Verified = z.boolean().brand<"Verified", "inout">();
export type Verified = z.output<typeof Verified>;"
`;

exports[`x-sohcah-brand - branded integer - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.3.0
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const Count = z.int().brand<"Count", "inout">();
export type Count = z.output<typeof Count>;"
`;

exports[`x-sohcah-brand - branded number - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.3.0
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const Price = z.number().brand<"Price", "inout">();
export type Price = z.output<typeof Price>;"
`;

exports[`x-sohcah-brand - branded schema referenced in object - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.3.0
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const UserId = z.string().brand<"UserId", "inout">();
export type UserId = z.output<typeof UserId>;
export const User = z.object({
  id: UserId,
  name: z.string()
});
export type User = z.output<typeof User>;"
`;

exports[`x-sohcah-brand - branded string - effect 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.3.0
/*prettier-ignore*/
/*eslint-disable*/
import * as Schema from "effect/Schema";
import { Effect } from "effect";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const UserId = Schema.String.pipe(Schema.mutable);
export type UserId = Schema.Schema.Type<typeof UserId>;"
`;

exports[`x-sohcah-brand - branded string - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.3.0
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const UserId = z.string().brand<"UserId", "inout">();
export type UserId = z.output<typeof UserId>;"
`;

exports[`x-sohcah-brand - branded string with pattern - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.3.0
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const Email = z.string().regex(/^[a-z]+@[a-z]+\\.[a-z]+$/).brand<"Email", "inout">();
export type Email = z.output<typeof Email>;"
`;

exports[`x-sohcah-brand - primitive without brand (no regression) - zod 1`] = `
"// Generated by @sohcah/openapi-generator
// Version: 0.3.0
/*prettier-ignore*/
/*eslint-disable*/
import { z } from "zod";
export class Api {
  #fetch;
  constructor(fetch: (path: string, options: {
    method: string;
    headers?: Headers;
    body?: string | Blob | FormData | URLSearchParams;
  }) => Promise<Response>) {
    this.#fetch = fetch;
  }
}
export const PlainString = z.string();
export type PlainString = z.output<typeof PlainString>;"
`;
